Create a deck and draw a card dynamics

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<section>
 			<div>
 				<span>You</span>
-				<img src="" alt="" />
+				<img class="userCard" src="" alt="" />
 			</div>
 			<div>
 				<span>Computer</span>
-				<img src="" alt="" />
+				<img class="computerCard" src="" alt="" />
 			</div>
 		</section>
 		<h2></h2>
