--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<body>
 		<header>
 			<button id="deck">New deck</button>
-			<button id="draw">Draw a card</button>
+			<button id="draw">Go to war!</button>
 		</header>
-		<section>
+		<section id="table">
 			<div>
 				<span>You</span>
 				<img class="userCard" src="" alt="" />
