--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/styles/styles.css" />
+		<link rel="stylesheet" href="./styles/styles.css" />
 		<title>Cards Game</title>
 	</head>
 	<body>
@@ -23,6 +23,6 @@
 		</section>
 		<h2></h2>
 
-		<script src="/js/main.js"></script>
+		<script src="./js/main.js"></script>
 	</body>
 </html>
